--- a/styles/home.css
+++ b/styles/home.css
@@ -161,6 +161,88 @@
 
 .intro_Right {
   min-height: 100%;
+  width: 40%;
+  overflow: hidden;
+  border-radius: 15px;
+  display: block;
+  
+}
+
+.intro_Image {
+  height: 100%;
+  transform: translate(-10%);
+  
+}
+}
+
+
+@media (min-width: 2500px) {
+
+  /* Intro Section */
+
+.intro_Container {
+  background-color: rgb(19, 19, 19);
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  padding: clamp(50px, 2vw, 80px);
+  width: 80vw;
+  height: clamp(max-content, 90%, 800px);
+  gap: 40px;
+  border-radius: 10px;
+  
+}
+
+.intro_Left {
+
+  min-width: 60%;
+  max-width: 60%;
+  height: 100%;
+  padding: 2vw;
+  text-align: center;
+  /* background-color: rgb(0, 143, 187); */
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.main_Title {
+
+    margin-bottom: 0;
+    font-size: clamp(4rem, min(10vw, 10vh), 8rem);
+
+  }
+
+#tsr_Text {
+  background: #00b2d6;
+  background: linear-gradient(100deg, rgb(34, 194, 226) 8%, rgb(0, 106, 192) 98%);
+  background-clip: text;
+  color: transparent;
+}
+
+.slogan {
+
+  font-size: clamp(1.5rem, 3vw, 3.5rem);
+  font-weight: bold;
+  width: 90%;
+  text-align: center;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  
+}
+
+.intro_Description {
+  display: flex;
+  flex-grow: 0.5;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1.8px 3vw;
+  font-size: clamp(1.5rem, min(4vw, 4.5vh), 3rem);
+  gap: clamp(50px, 1vh + 1vw, 150px);
+}
+
+.intro_Right {
+  min-height: 100%;
   overflow: hidden;
   border-radius: 15px;
   display: block;
@@ -173,4 +255,10 @@
   transform: translate(-10%);
   
 }
+
+.intro_Description > .generic_Button {
+
+    font-size: clamp(1.5rem, min(4vw, 4.5vh), 3rem);
+  }
+
 }
