--- a/styles/projects.css
+++ b/styles/projects.css
@@ -228,3 +228,213 @@ header {
     font-size: 20px;
     
 } */
+
+@media (min-width: 1200px) {
+  .projects_Main_Heading {
+    font-size: clamp(2rem, 8vw, 6rem);
+    padding: 8vw;
+  }
+  .nav_Filter {
+    padding: 1.5vw 10vw;
+  }
+  .filter_Button {
+    font-size: clamp(0.75rem, 2vw, 1.25rem);
+    padding: 1.5vw 4vw;
+  }
+  .projects_Grid {
+    gap: clamp(30px, 5vw, 80px);
+    padding: clamp(40px, 8vw, 100px);
+  }
+  .project_Card {
+    width: clamp(300px, 25vw, 500px);
+    height: clamp(300px, 25vw, 500px);
+  }
+  .project_Description {
+    font-size: clamp(0.75rem, 3vw, 1.5rem);
+  }
+}
+
+@media (min-width: 1600px) {
+  .projects_Main_Heading {
+    font-size: 6rem;
+    padding: 10vw;
+  }
+  .projects_Grid {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 5vw;
+    padding: 10vw 15vw;
+  }
+  .project_Card {
+    transition: transform 200ms ease, border 200ms ease;
+  }
+}
+
+
+@media (min-width: 2000px) {
+
+.projects_Main_Heading {
+
+    font-size: clamp(4rem, 13vw + 1rem, 8rem);
+    padding: 5vw;
+    text-align: center;
+}
+
+.nav_Filter {
+
+    background-color: rgb(16, 16, 16);
+    border-top: clamp(2px, 0.5vw, 6px) solid #00b2d6;
+    padding: clamp(10px, 0.55vw, 20px) clamp(5px, 0.25vw, 10px);
+}
+
+.filter_Button {
+
+    padding: 2vw 5vw;
+    font-size: clamp(1.25rem, 1vw, 2.5rem);
+    border: 4px solid #00b2d6;
+    transition: all 200ms ease; 
+}
+
+.filter_Button:hover {
+
+    padding: 2vw 5vw;
+    font-size: clamp(1.25rem, 1vw, 2.5rem);
+    border: 4px solid #ffffff;
+}
+
+.filter_Element {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    background-color: black;
+    height: 100vw;
+    width: 90vw;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+
+    border: 2px solid grey;
+    border-radius: 20px;
+    transform: translate(-50%, -50%);
+
+}
+
+.category {
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: clamp(1.25rem, 1.5vw, 2.4rem);
+
+    transition: all 100ms ease;
+}
+
+.projects_Grid {
+
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, clamp(400px,20vw, 800px));
+    padding: clamp(20px, 6vw, 80px);
+    gap: clamp(20px, 8vw, 60px);
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(16, 16, 16);
+    
+
+}
+
+.project_Card {
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: clamp(5px, 0.25vw, 10px) solid transparent;
+    transition: all 200ms ease-in-out;
+    width: clamp(400px,20vw, 800px);
+    height: clamp(400px,20vw, 800px);
+
+}
+
+.project_Link {
+
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+}
+
+.project_Thumbnail {
+
+    height: 70%;
+    /* width: 100%; */
+    /* border-top-left-radius: 10px;
+    border-top-right-radius: 10px; */
+    overflow: hidden;
+
+    border: 0px solid #00b2d6;
+    transition: all 100ms ease;
+
+    display: flex;
+    justify-content: center;
+
+    /* box-shadow: 0px 0px 20px rgb(0, 0, 0); */
+
+    
+}
+
+.project_Thumbnail img {
+
+    width: 100%;
+
+    
+}
+
+.project_Description {
+
+    background-color: rgb(37, 37, 37);
+    height: 30%;
+    /* border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px; */
+    overflow: hidden;
+
+
+    transition: all 100ms ease;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: clamp(1.25rem, 3vw, 2.5rem);
+
+    /* box-shadow: 0px 0px 20px rgb(0, 0, 0); */
+
+    
+}
+
+.project_Info {
+
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+.project_Card:hover {
+
+    border: clamp(5px, 0.25vw, 10px) solid #00b2d6;
+    
+}
+
+.project_Thumbnail img {
+
+    height: 100%;
+
+    transition: all 400ms ease-in-out;
+
+
+}
+
+}
