--- a/styles/services.css
+++ b/styles/services.css
@@ -927,3 +927,262 @@ h1 span{
     }
     
 }
+
+@media (min-width: 2000px) {
+     h1 {
+
+        font-size: clamp(4rem, 7vw, 8rem);
+
+        /* transform: translate(0, -50px); */
+    }
+    
+    /* Intro Section */
+
+    .services_Intro {
+
+        padding: clamp(80px,4vw, 160px);
+        padding-bottom: 0;
+        border-top: clamp(4px, 0.25vw, 10px) #00b7ff solid;
+    }
+    
+    .services_Heading {
+    
+        font-size: clamp(3rem, 2.5vw, 6rem);
+        margin-bottom: clamp(20px, 1vw, 40px);
+    }
+    
+    .intro_Description {
+    
+        font-size: clamp(1.5rem, 1.2vw, 3rem);
+        width: clamp(800px, 41vw, 1600px);
+    
+    }
+    
+    .services_List {
+
+        grid-template-columns:repeat(3, max-content);
+        padding: clamp(100px, 10vw, 200px);
+    }
+    
+    .service_Container {
+    
+
+        width: clamp(500px, 25vw, 900px);
+        height: unset;
+        border-radius: clamp(10px, 0.5vw, 20px);
+        padding: clamp(20px, 0.5vw, 40px);
+    
+    }
+    
+    .img_Wrapper {
+    
+        max-height: unset;
+        height: clamp(200px, 25vw, 360px);
+        width: 100%;
+        
+    
+    }
+    
+    .service_Description {
+    
+        /* height: 950px; */
+        height: unset;
+        
+    }
+    
+
+    .service_Description h3 {
+    
+        font-size: clamp(1rem, 1.3vw, 4rem);
+        height: clamp(75px, 4vw, 150px);
+        margin-top: 1px;
+    }
+    
+    .service_Description p {
+        /* max-height: clamp(220px, ); */
+        max-height: unset;
+        height: clamp(275px, 10vw, 550px);
+        padding: 0px 20px;
+        overflow:hidden;
+        
+        /* font-size: 21px; */
+        font-size: clamp(1rem, 0.4vw + 0.8rem, 2.5rem);
+    }
+    
+    .learn_More {
+    
+        /* width: 150px;
+        height: 50px; */
+        padding: clamp(10px, 0.5vw, 200px) clamp(25px, 1vw, 300px);
+        /* font-size: 21px; */
+        font-size: clamp(1rem, 1vw, 3.5rem);
+        border-radius: 2vw;
+        font-weight: 900;
+        margin: clamp(10px, 0.5vw, 20px);
+    }
+    
+    .thumbnail {
+    
+        Width: 100%;
+        transition: 400ms;
+    }
+    
+    /* why choose us */
+
+
+
+    .why_Choose_Desc_Title {
+
+        font-size: clamp(1.5rem, 8vw, 3rem);
+    }
+
+    .why_Choose_Desc {
+
+        font-size: clamp(0.5rem, 4vw, 1rem);
+    }
+
+    .why_Choose_Heading {
+
+        font-size: clamp(3rem, 4vw, 5rem);
+    }
+
+
+    .why_Choose_Container {
+    
+        width: clamp(650px, 80vw, 3500px);
+        
+        border-radius: clamp(30px, 1.5vw, 60px);
+        font-size: clamp(1.5rem, 1vw, 3rem);
+
+        width: max-content;
+        margin: clamp(100px, 5.5vh, 200px) auto;
+    }
+    
+    .backdrop_Styling {
+    
+        padding: clamp(100px, 10vw, 200px);
+
+    }
+    
+    .backdrop_Styling > div > p {
+    
+        border-radius: clamp(20px, 1vw, 40px);
+        padding: clamp(10px, 5%, 50px)  clamp(20px, 10%, 100px);
+    
+    }
+    
+    .why_Choose_Centerer {
+    
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: clamp(50px, 5vw, 100px);
+    
+        flex-grow: 1;
+    
+    }
+    
+    .why_Card_Container {
+    
+        display: grid;
+        grid-template-columns: repeat(2, minmax(auto, 700px));
+        grid-template-rows: minmax(auto, max-content);
+        gap: clamp(20px, 1.2vw, 40px);
+    
+    }
+    
+    .why_Choose_Card {
+    
+        padding: clamp(20px, 0.75vw, 30px);
+        height: clamp(125px, 6.5vw, 250px);
+        width: clamp(700px, 36.45vw, 1400px);
+        border-radius: clamp(20px, 1.2vw, 40px);
+        backdrop-filter: blur(12px);
+    }
+    
+    
+    .why_Choose_Desc {
+    
+        font-size: clamp(1.25rem, 4.5vw, 2.4rem);
+    }
+    
+    
+    .why_Choose_Titiling {
+    
+        /* height: clamp(200px, 10vw, 400px); */
+        gap: clamp(10px, 0.6vw, 20px);
+        align-items: center;
+        font-size: clamp(1.25rem, 4.5vw, 2.4rem);
+    }
+
+    /* Quote Section */
+
+    .quote_Section {
+
+        height: clamp(700px, 36.45vw, 1400px);
+        background-color: rgb(12, 12, 12);
+        padding: clamp(40px, 2.2vw, 80px) clamp(80px, 2.2vw, 160px);
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    
+    .quote_Container {
+        /* width: clamp(1260px, 66.5vw, 2520px); */
+        width: unset;
+        justify-content: center;
+        gap: clamp(60px, 3.1vw, 120px);
+    }
+    
+    .img_Quote_Container {
+    
+        max-width: unset;
+        height: clamp(600px, 31vw, 1200px);
+        width: clamp(600px, 31vw, 1200px);
+    }
+    
+    .img_Quote {
+    
+        height: auto;
+        width: 100%;
+    }
+    
+    .quote_Desc_Positioner {
+    
+        display: flex;
+        align-items: center;
+    }
+    
+    .quote_Desc_Container {
+    
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: clamp(600px, 31vw, 1200px);
+        text-align: center;
+        
+    
+    }
+    
+    .quote_Desc_Container h2 {
+    
+        font-size: clamp(3rem, 2.5vw, 6rem);
+        margin-bottom: clamp(10px, 0.6vw, 20px);
+    
+    }
+    
+    .quote_Desc_Container p {
+    
+        font-size: clamp(1.25rem, 2vw, 2.5rem);
+        margin-bottom: 20px;
+        max-width: unset;
+    
+    }
+    
+    .quote_Contact_Btn {
+    
+        padding: clamp(8px, 0.4vw, 16px) clamp(16px, 0.8vw, 32px);
+        font-size: clamp(1.5rem, 1.5vw, 3rem);
+        border-radius: 30vw;
+    
+    }
+}
+
