--- a/styles/styles.css
+++ b/styles/styles.css
@@ -979,3 +979,283 @@
 
     display: none;
   }
+
+  @media (min-width: 2000px) {
+  /* Nav links bigger */
+  .nav_List {
+    font-size: clamp(1.5rem, 1.5vw, 3rem);
+  }
+
+  /* Global button scaling */
+  .generic_Button {
+    font-size: clamp(2.5rem, 2vw, 5rem);
+    padding: clamp(10px, 1.5vw, 40px) clamp(20px, 2vw, 80px);
+    border-radius: 30vw;
+  }
+
+    
+  
+  .header_Logo {
+
+    width: clamp(100px, 8.5vw, 500px) !important;
+    height: clamp(100px, 8.5vw, 500px) !important;
+    
+  }
+  
+  /* nav bar */
+
+  
+  .top_Panel {
+
+    padding: 10px 0;
+    width: 95vw;
+    height: max-content;
+    max-width: 100%;
+    
+  }
+
+  .navbarContainer > .generic_Button {
+
+    padding: 0;
+    
+  }
+
+  .navbarContainer > .generic_Button a {
+
+    width: 100%;
+    height: 100%;
+    padding: 1vw, 20vw;
+    font-size: clamp(1.25rem, 2.2vw, 3rem);
+    
+  }
+
+  .logo_And_Hamburger {
+
+    height: max-content;
+    
+  }
+  
+
+
+  
+  
+  .global_Nav {
+
+    width: clamp(800px, 50vw, 1600px);
+    height: clamp(80px, 5vh, 160px);
+    
+  }
+
+  .nav_List {
+
+    font-size: clamp(3.5rem, 1vw, 5rem);
+
+  }
+
+  
+  .nav_Link {
+    height: 100%;
+    width: fit-content;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+  }
+
+  
+    /* Navbar */
+   
+   
+    /* footer */
+  
+    footer {
+      background-color: rgb(17, 17, 17);
+    }
+  
+    footer a {
+
+      text-decoration: none;
+      /* color: rgb(83, 165, 76); */
+      color: #008ca8;
+      transition: all 150ms ease;
+    }
+  
+    footer a:hover {
+  
+      color: #00b2d6;
+      
+    }
+  
+    .footer_Div {
+  
+      all: unset;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: baseline;
+  
+      background-color: rgb(17, 17, 17);
+  
+      border-top: 5px solid grey;
+      padding: 5vh 20px;
+  
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 1.2vw;
+      color: rgb(126, 126, 126);
+    }
+  
+    .footer_Column {
+  
+      all: unset;
+      max-width: 20%;
+    }
+  
+    .address_Column {
+      all: unset;
+      display: flex;
+      flex-direction: column;
+      gap: 0.2vh;
+    }
+
+
+    .footer_Column h4 {
+      text-align: unset;
+    }
+  
+    .footer_Column ul {
+  
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      gap: 0.2vh;
+    }
+  
+    .footer_Logo {
+  
+      float: left;
+      height: 10vh;
+      width: auto;
+      margin-right: 8px;
+  
+    }
+  
+    .footer_Column_Link {
+  
+      text-align: left;
+    }
+  
+    .footer-divider {
+  
+      background-color: #3a3838;
+      width: 84vw;
+      height: 0.4vh;
+  
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%);
+  
+    }
+  
+    .footer_Div_Lower {
+  
+      all: unset;
+      display: flex;
+      justify-content: space-between;
+  
+      width: 84vw;
+      padding: 1.3vw;
+      margin: 0 auto;
+  
+      background-color: rgb(17, 17, 17);
+  
+      color: rgb(150, 150, 150);
+      font-size: 1.2vw;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+  
+    .description_Footer {
+  
+      display: flex;
+      align-items: center;
+    }
+  
+    .footer_Icon_One, .footer_Icon_Two, .footer_Icon_Three {
+  
+      display: inline-block;
+      width: 1em;
+      height: 1em;
+      margin-right: 0.5vw;
+      background-size:contain;
+      background-position: center;
+  
+  
+    }
+  
+    .footer_Icon_One {
+      background-image: url(../Images/Icons/location_on_30dp_7D7D7D_FILL0_wght400_GRAD0_opsz24.svg);
+    }
+  
+    .footer_Icon_Two {
+      background-image: url(../Images/Icons/phone_in_talk_30dp_7D7D7D_FILL0_wght400_GRAD0_opsz24.svg);
+    }
+  
+    .footer_Icon_Three {
+      background-image: url(../Images/Icons/mail_30dp_7D7D7D_FILL0_wght400_GRAD0_opsz24.svg);
+    }
+  
+    .social_Link {
+  
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+  
+    .footer_Social_Icon {
+  
+      width: 1.2vw;
+      height: 1.2vw;
+      margin-right: 0.5vw;
+      background-size: cover;
+  
+    }
+  
+    #soc_One {
+  
+      display: inline-block;
+      content: "";
+      background-image: url(../Images/Icons/socials/linkedin-svgrepo-com.svg);
+    }
+    #soc_Two {
+  
+      display: inline-block;
+      content: "";
+      background-image: url(../Images/Icons/socials/facebook-color-svgrepo-com.svg);
+    }
+    #soc_Three {
+  
+      display: inline-block;
+      content: "";
+      background-image: url(../Images/Icons/socials/instagram-svgrepo-com.svg);
+    }
+    #soc_Four {
+  
+      display: inline-block;
+      content: "";
+      background-image: url(../Images/Icons/socials/tiktok-svgrepo-com\(1\).svg);
+      background-color: #003f58;
+    }
+  
+    .tos {
+  
+      display: flex;
+      gap: 25px;
+    }
+  
+
+}
+
+@media (min-width: 2560px) {
+  :root {
+    /* Increase base from 16px → 20px (or other) */
+    font-size: 125%;  /* 16px * 1.25 = 20px */
+  }
+}
+
+
